리뷰 위치 변경

--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -2,7 +2,8 @@
   
   .request_content {
     margin-top: 30px;
-    margin-bottom: 14px;
+    // margin-bottom: 14px;
+    margin-bottom: 30px;
     word-break: break-all;
   }
 
@@ -303,7 +304,8 @@
   .receipt_button_container {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    // margin-top: 20px;
+    margin-top: 30px;
   }
 
   .receipt_contents_ok_button {
@@ -339,7 +341,8 @@
   }
 
   .price_info_container {
-    margin-top: 20px;
+    // margin-top: 20px;
+    margin-top: 30px;
   }
 
   .question_container {
