--- a/src/res/css/Popup_refund.scss
+++ b/src/res/css/Popup_refund.scss
@@ -24,7 +24,7 @@
     width: 100%;
     font-size: 14px;
     max-width: 520px;
-    height: 100%;
+    // height: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-right: 32px;
