--- a/src/res/css/StoreContentConfirm.scss
+++ b/src/res/css/StoreContentConfirm.scss
@@ -90,7 +90,8 @@
   .explain_text {
     font-size: 10px;
     color: #808080;
-    margin-top: 5px;
+    margin-top: 8px;
+    margin-bottom: 30px;
   }
 
   .title_container {
@@ -108,13 +109,23 @@
     margin-top: 10px;
   }
 
+  .community_container_box {
+    margin-top: 30px;
+  }
+
+  .community_top_line {
+    width: 100%;
+    height: 1px;
+    background-color: #f4f4f4;
+  }
+
   .community_container {
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .problem_button_container {
-    margin-top: 20px;
+    margin-top: 30px;
     text-align: right;
   }
 
@@ -129,7 +140,7 @@
     border-radius: 12px;
     background-color: #00bfff;
     color: white;
-    margin-top: 15px;
+    margin-top: 20px;
     font-size: 14px;
   }
 
@@ -164,8 +175,21 @@
     width: 100%;
     height: 1px;
     background-color: #f4f4f4;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .white_button {
+    width: 100%;
+    height: 48px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 12px;
   }
 
   @media (max-width: 520px){
