--- a/src/res/css/StoreContentsListItem.scss
+++ b/src/res/css/StoreContentsListItem.scss
@@ -106,6 +106,10 @@ $item_width: 80px;
     color: #ffffff;
   }
 
+  .badge_img {
+    margin-left: 6px;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/
     
