--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -98,6 +98,13 @@ $font_size: 14px;
     color: #00bfff;
   }
 
+  .point_tag_box_file_type {
+    background-color: #ededed;
+    color: #7f7f7f;
+    display: flex;
+    align-items: center;
+  }
+
   .content_title {
     font-size: 26px;
     font-weight: bold;
@@ -326,6 +333,23 @@ $font_size: 14px;
     height: $img_width;
     overflow: hidden;
     border-radius: 20px;
+  }
+
+  .download_type_notice_box {
+    width: 100%;
+    height: 52px;
+    border-radius: 12px;
+    background-color: #e5f9ff;
+    padding: 0px 14px;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+  }
+
+  .download_type_notice_text {
+    margin-left: 8px;
+    color: #00bfff;
+    font-size: 14px;
   }
 
   @media (max-width: 520px){
