--- a/src/res/css/StoreOrderItem.scss
+++ b/src/res/css/StoreOrderItem.scss
@@ -29,6 +29,14 @@ $item_width: 80px;
     margin-bottom: 4px;
   }
   
+  .item_title_container {
+    // display: flex;
+  }
+
+  .item_badge_box {
+    margin-left: 6px;
+  }
+
   .item_title {
     font-size: 16px;
     color: #1a1a1a;
