--- a/src/res/css/StoreOrderPage.scss
+++ b/src/res/css/StoreOrderPage.scss
@@ -17,7 +17,7 @@
   }
 
   .container_box {
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 32px;
     border-radius: 20px;
     background-color: #ffffff;
@@ -189,6 +189,7 @@
     font-weight: 500;
     color: #999999;
     margin-top: 40px;
+    margin-bottom: 40px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -236,6 +237,23 @@
     color: #fc5e7c;
     margin-left: 12px;
     width: 95%;
+  }
+
+  .download_type_notice_box {
+    width: 100%;
+    height: 52px;
+    border-radius: 12px;
+    background-color: #e5f9ff;
+    padding: 0px 14px;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+  }
+
+  .download_type_notice_text {
+    margin-left: 8px;
+    color: #00bfff;
+    font-size: 14px;
   }
 
   @media (max-width: 520px){
