--- a/src/res/css/CompletedFileUpLoader.scss
+++ b/src/res/css/CompletedFileUpLoader.scss
@@ -46,20 +46,40 @@
 
   .item_contents_container {
     display: flex;
-    width: 100%;
+    // width: 100%;
     align-items: center;
+    // justify-content: flex-start;
+    // flex-shrink: 1;
+    // flex-grow: 0;
+  }
+
+  .item_file_image {
+    display: flex;
   }
 
   .item_file_name {
+    display: flex;
+    width: auto;
     margin-left: 8px;
     font-size: 12px;
     color: #191919;
+    text-align: left;
+    white-space: nowrap;
   }
 
   .item_file_size {
+    display: flex;
+    width: auto;
     margin-left: 16px;
     font-size: 12px;
     color: #b3b3b3;
+    text-align: left;
+    white-space: nowrap;
+  }
+
+  .circle_button {
+    display: flex;
+    flex-shrink: 1;
   }
 
   .file_list_container {
