--- a/src/res/css/CompletedFileUpLoader.scss
+++ b/src/res/css/CompletedFileUpLoader.scss
@@ -46,7 +46,7 @@
 
   .item_contents_container {
     display: flex;
-    // width: 100%;
+    width: 90%;
     align-items: center;
     // justify-content: flex-start;
     // flex-shrink: 1;
@@ -58,13 +58,14 @@
   }
 
   .item_file_name {
-    display: flex;
+    display: block;
     width: auto;
     margin-left: 8px;
     font-size: 12px;
     color: #191919;
     text-align: left;
     white-space: nowrap;
+    max-width: 70%;
   }
 
   .item_file_size {
