파일 다운로드시 wait 하지 않고 즉시 대응하게 수정

--- a/src/res/css/CompletedFileUpLoader.scss
+++ b/src/res/css/CompletedFileUpLoader.scss
@@ -105,6 +105,10 @@
     text-align: right;
     padding-right: 16px;
   }
+
+  .CompletedFileDownloadButton_button:disabled {
+    background-color: rgba(0,0,0,0) !important;
+  }
   
   .CompletedFileDownloadButton_button_spinner {
     margin-left: auto;
