--- a/src/res/css/App_modify.scss
+++ b/src/res/css/App_modify.scss
@@ -18,6 +18,11 @@
   .right_container {
     width: 276px;
     flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
     // background-color: red;
   }
 
@@ -73,6 +78,8 @@
 
   .buttons_container {
     margin-top: 40px;
+    // display: flex;
+    // justify-content: space-between;
   }
 
   .change_password_button {
@@ -114,6 +121,15 @@
     height: 24px;
   }
 
+  .drawal_button {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #999999;
+    display: flex;
+    align-items: center;
+  }
+
+
   @media (max-width: 1176px){
     .all_container {
       display: block;
@@ -126,6 +142,15 @@
     .right_container {
       width: 100%;
       margin-top: 40px;
+    }
+
+    .update_button {
+      width: 100%;
+    }
+
+    .drawal_button {
+      margin-top: 24px;
+      margin-bottom: 0px;
     }
   }
 
