--- a/src/res/css/WithdrawalPage.scss
+++ b/src/res/css/WithdrawalPage.scss
@@ -118,6 +118,50 @@
     color: #ffffff;
   }
 
+  .help_bar_box {
+    width: 100%;
+    height: 108px;
+    border-radius: 4px;
+    background-color: #e5f8ff;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  .help_bar_close_button {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    background-color: rgba(0,0,0,0);
+  }
+
+  .help_bar_container {
+    width: 100%;
+    max-width: 776px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .help_bar_explain_text {
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .help_bar_button {
+    width: 176px;
+    height: 44px;
+    border-radius: 4px;
+    background-color: #00bfff;
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+  }
+
   @media (max-width: 768px){
     /*테블릿*/  
     .leave_button {
@@ -126,6 +170,25 @@
 
     .back_button {
       width: 100%;
+    }
+
+    .help_bar_box {
+      height: 172px;
+    }
+
+    .help_bar_container {
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding-left: 40px;
+    }
+
+    .help_bar_explain_text {
+      font-size: 14px;
+    }
+
+    .help_bar_button {
+      margin-top: 24px;
     }
   }
 
@@ -156,6 +219,10 @@
 
     .reason_textarea {
       height: 140px;
+    }
+
+    .help_bar_container {
+      padding-left: 24px;
     }
   }
 }
