--- a/src/res/css/Footer_React.scss
+++ b/src/res/css/Footer_React.scss
@@ -126,6 +126,10 @@
 
   }
 
+  .select_box_lang {
+    margin-top: 24px;
+  }
+
   @media (max-width: 1176px){
     /*테블릿일때*/
     padding-left: 40px;
@@ -162,6 +166,10 @@
 
     .term_privacy_container {
       margin-top: 30px;
+    }
+
+    .select_box_lang {
+      margin-top: 16px;
     }
   }
 
