휴대폰 인증/휴면 계정 복귀 처리/마케팅 수신 동의

--- a/src/res/css/PhoneConfirm.scss
+++ b/src/res/css/PhoneConfirm.scss
@@ -67,6 +67,10 @@
     color: #b3b3b3 !important;
   }
 
+  .number_send_confirm_button_bg_white {
+    background-color: #ffffff !important;
+  }
+
   .number_confirm_input_container {
     display: flex;
     margin-top: 4px;
