--- a/src/res/css/Home_Thumb_Popular_item.scss
+++ b/src/res/css/Home_Thumb_Popular_item.scss
@@ -22,6 +22,10 @@ $item_mobile_item_width: 230px;
     text-align: left;
   }
 
+  .img_box {
+    position: relative;
+  }
+
   .item_img {
     width: $item_box_width;
     height: $item_box_width;
