댓글 스크롤뷰 개선

--- a/src/res/css/StoreDetailPage.scss
+++ b/src/res/css/StoreDetailPage.scss
@@ -59,6 +59,7 @@ $bgImageHeightMax: 280px;
     // margin-bottom: 64px;
     background-color: #ffffff;
     border-radius: 20px;
+    padding-bottom: 35px;
   }
 
   .contentsMenuContainer {
